# cli

./: .clippy.toml  .gitignore  .gitleaks.toml  .markdownlintignore  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  trivy.yml
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  manifest.rs  output.rs  project.rs  rustuse.rs
src/commands/: add.rs  catalog.rs  check.rs  ci.rs  completions.rs  copy.rs  dev.rs  diff.rs  docs.rs  doctor.rs  facade.rs  ferris.rs  info.rs  init.rs  interactive.rs  list.rs  mod.rs  outdated.rs  remove.rs  report.rs  scan.rs  search.rs  update.rs  upgrade.rs
src/commands/ci/: check.rs
src/commands/dev/: check.rs  facade.rs  fix.rs  info.rs  inspect.rs  interactive.rs  new.rs  report.rs  root.rs  setup.rs  utils.rs
src/commands/dev/facade/: discover.rs  inspect.rs  report.rs  run.rs
src/commands/dev/root/: inspect.rs  manifest_fix.rs  manifests.rs  report.rs  scan.rs  standards.rs
src/commands/dev/utils/: artifacts.rs  cargo.rs  development.rs  documentation.rs  github.rs  gitlab.rs  manifest.rs  nonstandard.rs  release.rs  scan.rs  tooling.rs
src/commands/dev/utils/crates_io/: category_slugs.rs
src/commands/dev/utils/github/: check.rs  hash.rs  issue.rs  report.rs  workflows.rs
src/rustuse/: adapter.rs  adoption.rs  catalog.rs  ci.rs  config.rs  facade.rs  fleet.rs  interaction.rs  project.rs  report.rs  root.rs  upgrade.rs  utils.rs
src/rustuse/adapter/: cargo.rs  crates_io.rs  git.rs  github.rs  gitlab.rs  process.rs
src/rustuse/adapter/cargo/: add.rs  install.rs  manifest.rs  model.rs
src/rustuse/adapter/crates_io/: category_slugs.rs
src/rustuse/adapter/github/: check.rs  hash.rs  issue.rs  model.rs  policy.rs  report.rs  workflows.rs
src/rustuse/catalog/: discover.rs  generated.rs  index.rs  lookup.rs  model.rs  search.rs
src/rustuse/ci/: github_actions.rs  report.rs  trusted_publishing.rs  workflow.rs
src/rustuse/facade/: codes.rs  diagnostics.rs  discover.rs  documentation.rs  fix.rs  flags.rs  inspect.rs  issue.rs  layout.rs  manifest.rs  model.rs  non_standard.rs  release.rs  report.rs  scan.rs  standards.rs
src/rustuse/facade/fix/: apply.rs  manifest.rs  model.rs  plan.rs  render.rs
src/rustuse/facade/report/: action_plan.rs  child_crates.rs  ci_cd.rs  contents.rs  documentation.rs  expected_structure.rs  manifest.rs  non_standard.rs  release.rs  repository.rs  shape.rs  summary.rs  tooling.rs
src/rustuse/fleet/: diagnostics.rs  discover.rs  inspect.rs  manifest.rs  publish.rs  report.rs
src/rustuse/report/: destination.rs  generate.rs  markdown.rs  subject.rs
src/rustuse/root/: discover.rs  inspect.rs  report.rs  scan.rs
src/rustuse/upgrade/: model.rs
src/rustuse/utils/: report.rs  toml.rs  tooling.rs  use_cli_temp.rs  use_fs_temp.rs
tests/: add.rs  cargo_subcommand.rs  catalog.rs  check.rs  ci.rs  cli_help.rs  cli_smoke.rs  copy.rs  docs.rs  doctor.rs  facade.rs  ferris.rs  init.rs  list.rs  report.rs  root_help.rs  scan.rs  search.rs  upgrade.rs
tests/common/: mod.rs
