[package]
autobins = false
description = "RustUse command-line adoption helper."
edition = "2024"
homepage = "https://rustuse.org/cli"
keywords = ["cli", "command-line", "rustuse"]
license = "MIT OR Apache-2.0"
name = "rustuse-cli"
publish = false
repository = "https://github.com/RustUse/cli"
rust-version = "1.95.0"
version = "0.2.0-beta.1"

[workspace]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[lints]
workspace = true

[lib]
name = "rustuse_cli"
path = "src/lib.rs"

[[bin]]
name = "rustuse"
path = "src/bin/rustuse.rs"

[[bin]]
name = "cargo-rustuse"
path = "src/bin/cargo-rustuse.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
# use-rust = { version = "0.2.0", path = "../use-rust/crates/use-rust" }
# use-rust = { version = "0.1.0" }
# use-rustacean = { version = "0.2.0" }
# use-cli = { version = "0.1.0" }
# use-config = { version = "0.1.0" }
# use-fs = { version = "0.1.0" }
# use-git = { version = "0.1.0" }
# use-diagnostic = { version = "0.1.0" }
# use-id = { version = "0.1.0" }
# use-text = { version = "0.1.0" }
# use-time = { version = "0.1.0" }
# use-validate = { version = "0.1.0" }
