[package]
autobins = false
description = "RustUse command-line adoption helper."
documentation = "https://docs.rs/rustuse-cli"
edition = "2024"
homepage = "https://rustuse.org/cli"
license = "MIT OR Apache-2.0"
name = "rustuse-cli"
repository = "https://github.com/RustUse/cli"
version = "0.1.0"

[lib]
name = "rustuse_cli"
path = "src/lib.rs"

[[bin]]
name = "rustuse"
path = "src/bin/rustuse.rs"

[[bin]]
name = "cargo-rustuse"
path = "src/bin/cargo-rustuse.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
