[package]
autobins = false
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
description = "A Cargo subcommand and CLI for adopting, managing, and maintaining RustUse crates."
documentation = "https://docs.rs/rustuse-cli"
edition = "2024"
homepage = "https://rustuse.org/cli"
include = ["LICENSE*", "README.md", "src/**", "tests/**"]
keywords = ["cargo-subcommand", "cli", "dependency-manager", "rustuse", "workspace"]
license = "MIT OR Apache-2.0"
name = "rustuse-cli"
publish = ["crates-io"]
readme = "README.md"
repository = "https://github.com/RustUse/cli"
rust-version = "1.95.0"
version = "0.2.0-beta.2"

[workspace]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# nursery = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }

dbg_macro = "warn"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"

[lints]
workspace = true

[lib]
name = "rustuse_cli"
path = "src/lib.rs"

[[bin]]
name = "rustuse"
path = "src/bin/rustuse.rs"

[[bin]]
name = "cargo-rustuse"
path = "src/bin/cargo-rustuse.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.12.0"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
# use-rust = { version = "0.2.0", path = "../use-rust/crates/use-rust" }
# use-rust = { version = "0.1.0" }
# use-rustacean = { version = "0.2.0" }
# use-cli = { version = "0.1.0" }
# use-config = { version = "0.1.0" }
# use-fs = { version = "0.1.0" }
# use-git = { version = "0.1.0" }
# use-diagnostic = { version = "0.1.0" }
# use-id = { version = "0.1.0" }
# use-text = { version = "0.1.0" }
# use-time = { version = "0.1.0" }
# use-validate = { version = "0.1.0" }
